err/django-qwert.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_qwert-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qwert'...
Listing './lib/python3.5/site-packages/qwert/decorators'...
Listing './lib/python3.5/site-packages/qwert/http'...
Listing './lib/python3.5/site-packages/qwert/management'...
Listing './lib/python3.5/site-packages/qwert/middleware'...
Listing './lib/python3.5/site-packages/qwert/templatetags'...
Compiling './lib/python3.5/site-packages/qwert/templatetags/expr.py'...
***   File "./lib/python3.5/site-packages/qwert/templatetags/expr.py", line 62
    raise template.TemplateSyntaxError, "%r tag requires arguments" % token.contents[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qwert/templatetags/get_links.py'...
***   File "./lib/python3.5/site-packages/qwert/templatetags/get_links.py", line 26
    raise template.TemplateSyntaxError, "Error in {% getlinks %} filter: The Python BeautifulSoup and/or urllib2 libraries aren't installed."
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qwert/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
